      anymore.
    - Blank gateway is now accepted. (Closes: #241509, #238809)
    - Put own hostname in 127.0.0.1 hosts entry. (Closes: #238305, #237779)
    - Add some missing newlines for wireless devices to netcfg_write_dhcp.
    - Prune unused #defines.
    - Nuke unused netcfg/title template.
    - Clarify nameserver question by adding an introductory sentence.
      (Closes: #243251) 
  * Per Olofsson
    - Check for hotpluggable (PCMCIA) network interfaces in
      /etc/network/devhotplug and don't generate auto entries for them.
      Also put them in a "mapping hotplug" stanza. Closes: #239284.

 -- Joshua Kwan <joshk@triplehelix.org>  Sun, 11 Apr 2004 22:55:40 -0700

netcfg (0.61) unstable; urgency=high

  * Kenshi Muto
    - modprobe in busybox won't load af_packet. This causes DHCP
      configuration fail.
      This can be avoid by running modprobe without '/sbin/'.
  * Updated translations: 
    - Welsh (cy.po) by Dafydd Harries
    - German (de.po) by Alwin Meschede
    - Polish (pl.po) by Bartosz Fenski
    - Russian (ru.po) by Nikolai Prokoschenko
    - Slovenian (sl.po) by Jure Äuhalev
    - Albanian (sq.po) by Elian Myftiu

 -- Joey Hess <joeyh@debian.org>  Thu,  1 Apr 2004 20:26:33 -0500

netcfg (0.60) unstable; urgency=low

  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Konstantinos Margaritis
    - Hebrew (he.po) by Lior Kaplan
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Korean (ko.po) by Changwoo Ryu
    - Albanian (sq.po) by Elian Myftiu
    - Swedish (sv.po) by André Dahlqvist
    - Turkish (tr.po) by Osman Yüksel
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Tue, 30 Mar 2004 14:32:01 -0500

netcfg (0.59) unstable; urgency=low

  * Joey Hess
    - Fix endian problem in gateway calculation.
  * Updated translations: 
    - Bosnian (bs.po) by Safir Å eÄeroviÄ